--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <meta name="author" content="DINESH SANKAR" />
     <link rel="canonical" href="https://dinesh-sankar-selvi.github.io/hashveno/" />
 
-    <meta property="og:title" content="Your Page Title" />
-    <meta property="og:description" content="A brief description of your page." />
-    <meta property="og:image" content="URL to your image" />
-    <meta property="og:url" content="https://www.yourwebsite.com/your-page" />
+    <meta property="og:title" content="hashveno" />
+    <meta property="og:description" content="Explore More content on my Instagram." />
+    <meta property="og:image" content="https://imgs.search.brave.com/7t9Q2c9CyCRDebu0oK9i5rOk-XePSnzKRaLntkOuxRU/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pY2hl/Zi5iYmNpLmNvLnVr/L2FjZS9zdGFuZGFy/ZC85NzYvY3BzcHJv/ZHBiL0U4MDIvcHJv/ZHVjdGlvbi9fODk2/NDkzOTVfaW5zdGFn/cmFtX2xvZ29fOTc2/LmpwZw" />
+    <meta property="og:url" content="https://www.instagram.com/hashveno/" />
 
-    <meta name="twitter:card" content="summary_large_image" />
+    <!-- <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Your Page Title" />
     <meta name="twitter:description" content="A brief description of your page." />
-    <meta name="twitter:image" content="URL to your image" />
+    <meta name="twitter:image" content="URL to your image" /> -->
   </head>
   <body>
     <div id="root"></div>
